--- a/_posts/Life/Essay/2014-02-17-love.html
+++ b/_posts/Life/Essay/2014-02-17-love.html
@@ -8,13 +8,7 @@
 <![endif]-->            
 </head>
 <body>
-<hr />
-<p>layout: post
-title: 致一枝永不凋谢的玫瑰代表我对你的爱！
-category: 生活
-tags: Essay
-keywords: 总结,毕业，工作</p>
-<h2>description: </h2>
+<p>致我最爱的芹芹，用这枝永不凋零的玫瑰代表我对你的至死不渝！</p>
 <canvas id="c"></canvas>
 <script>
 	var b = document.body;
