--- a/_posts/Life/Essay/2014-02-17-love.html
+++ b/_posts/Life/Essay/2014-02-17-love.html
@@ -8,7 +8,7 @@
 <![endif]-->            
 </head>
 <body>
-<p>致我最爱的芹芹，用这枝永不凋零的玫瑰代表我对你的至死不渝！</p>
+<p align="center">致我最爱的芹芹，用这枝永不凋零的玫瑰代表我对你的至死不渝！</p>
 <canvas id="c"></canvas>
 <script>
 	var b = document.body;
