--- a/_posts/Life/Essay/2014-02-17-挚爱.html
+++ b/_posts/Life/Essay/2014-02-17-挚爱.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <p align="center">致我最爱的芹芹，用这枝永不凋零的玫瑰代表我对你的至死不渝！</p>
-<canvas id="c"></canvas>
+<canvas id="c" aligin="center"></canvas>
 <script>
 	var b = document.body;
 	var c = document.getElementsByTagName('canvas')[0];
